Second homework (first 5 pages of text).

--- a/text/praca/literatura.bib
+++ b/text/praca/literatura.bib
@@ -9,8 +9,102 @@
 	year = {2017},
 	doi = {10.1101/094672},
 	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {Advances in nanopore sequencing technology have enabled investigation of the full catalogue of covalent DNA modifications. We present the first algorithm for the identification of modified nucleotides without the need for prior training data along with the open source software implementation, nanoraw. Nanoraw accurately assigns contiguous raw nanopore signal to genomic positions, enabling novel data visualization, and increasing power and accuracy for the discovery of covalently modified bases in native DNA. Ground truth case studies utilizing synthetically methylated DNA show the capacity to identify three distinct methylation marks, 4mC, 5mC, and 6mA, in seven distinct sequence contexts without any changes to the algorithm. We demonstrate quantitative reproducibility simultaneously identifying 5mC and 6mA in native E. coli across biological replicates processed in different labs. Finally we propose a pipeline for the comprehensive discovery of DNA modifications in any genome without a priori knowledge of their chemical identities.},
 	URL = {https://www.biorxiv.org/content/early/2017/04/10/094672},
 	eprint = {https://www.biorxiv.org/content/early/2017/04/10/094672.full.pdf},
 	journal = {bioRxiv}
 }
+
+
+@article{Nanocall2017,
+author = {David, Matei and Dursi, L. J. and Yao, Delia and Boutros, Paul C. and Simpson, Jared T.},
+title = {Nanocall: an open source basecaller for {Oxford Nanopore} sequencing data},
+journal = {Bioinformatics},
+volume = {33},
+number = {1},
+pages = {49-55},
+year = {2017},
+doi = {10.1093/bioinformatics/btw569},
+URL = { + http://dx.doi.org/10.1093/bioinformatics/btw569},
+eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioinformatics_btw569/1/btw569.pdf}
+}
+
+@misc{KmerModels,
+ title={kmer\_models},
+ author={Oxford Nanopore Technologies},
+ note={\url{https://github.com/nanoporetech/kmer_models}},
+}
+
+@misc{BasecallerComparison,
+ title={A comparison of different {Oxford Nanopore} basecallers},
+ author={Ryan Wick},
+ note={\url{https://github.com/rrwick/Basecalling-comparison}},
+}
+
+@article{DeepNano2017,
+    author = {Boža, Vladimír AND Brejová, Broňa AND Vinař, Tomáš},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {{DeepNano}: Deep recurrent neural networks for base calling in {MinION} nanopore reads},
+    year = {2017},
+    month = {06},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0178751},
+    pages = {1-13},
+    number = {6},
+    doi = {10.1371/journal.pone.0178751}
+}
+
+@article {Chiron2017,
+	author = {Teng, Haotian and Cao, Minh Duc and Hall, Michael B. and Duarte, Tania and Wang, Sheng and Coin, Lachlan},
+	title = {Chiron: Translating nanopore raw signal directly into nucleotide sequence using deep learning},
+	year = {2017},
+	doi = {10.1101/179531},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2017/09/12/179531},
+	eprint = {https://www.biorxiv.org/content/early/2017/09/12/179531.full.pdf},
+	journal = {bioRxiv}
+}
+
+@Article{Bradley2015,
+author={Bradley, Phelim
+and Gordon, N. Claire
+and Walker, Timothy M.
+and Dunn, Laura
+and Heys, Simon
+and Huang, Bill
+and Earle, Sarah
+and Pankhurst, Louise J.
+and Anson, Luke
+and de Cesare, Mariateresa
+and Piazza, Paolo
+and Votintseva, Antonina A.
+and Golubchik, Tanya
+and Wilson, Daniel J.
+and Wyllie, David H.
+and Diel, Roland
+and Niemann, Stefan
+and Feuerriegel, Silke
+and Kohl, Thomas A.
+and Ismail, Nazir
+and Omar, Shaheed V.
+and Smith, E. Grace
+and Buck, David
+and McVean, Gil
+and Walker, A. Sarah
+and Peto, Tim E. A.
+and Crook, Derrick W.
+and Iqbal, Zamin},
+title={Rapid antibiotic-resistance predictions from genome sequence data for Staphylococcus aureus and Mycobacterium tuberculosis},
+journal={Nat Commun},
+year={2015},
+month={Dec},
+day={21},
+publisher={Nature Publishing Group},
+volume={6},
+pages={10063},
+note={26686880[pmid]},
+issn={2041-1723},
+doi={10.1038/ncomms10063},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4703848/}
+}
+
