--- a/text/praca/literatura.bib
+++ b/text/praca/literatura.bib
@@ -4,19 +4,19 @@
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
 @article {Stoiber2017,
-	author = {Stoiber, Marcus H and Quick, Joshua and Egan, Rob and Lee, Ji Eun and Celniker, Susan E and Neely, Robert and Loman, Nicholas and Pennacchio, Len and Brown, James B},
+	author = {Stoiber, Marcus H and others},
 	title = {De novo Identification of {DNA} Modifications Enabled by Genome-Guided Nanopore Signal Processing},
 	year = {2017},
-	doi = {10.1101/094672},
 	publisher = {Cold Spring Harbor Laboratory},
 	URL = {https://www.biorxiv.org/content/early/2017/04/10/094672},
 	eprint = {https://www.biorxiv.org/content/early/2017/04/10/094672.full.pdf},
-	journal = {bioRxiv}
+	journal = {bioRxiv \normalfont{094672}},
+  doi = {10.1101/094672}
 }
 
 
 @article{Nanocall2017,
-author = {David, Matei and Dursi, L. J. and Yao, Delia and Boutros, Paul C. and Simpson, Jared T.},
+author = {David, Matei and others},
 title = {Nanocall: an open source basecaller for {Oxford Nanopore} sequencing data},
 journal = {Bioinformatics},
 volume = {33},
@@ -41,7 +41,9 @@ eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioin
 }
 
 @article{DeepNano2017,
-    author = {Boža, Vladimír AND Brejová, Broňa AND Vinař, Tomáš},
+    author = {Boža, Vladimír AND
+    Brejová, Broňa AND 
+    Vinař, Tomáš},
     journal = {PLOS ONE},
     publisher = {Public Library of Science},
     title = {{DeepNano}: Deep recurrent neural networks for base calling in {MinION} nanopore reads},
@@ -55,45 +57,18 @@ eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioin
 }
 
 @article {Chiron2017,
-	author = {Teng, Haotian and Cao, Minh Duc and Hall, Michael B. and Duarte, Tania and Wang, Sheng and Coin, Lachlan},
+	author = {Teng, Haotian and others},
 	title = {Chiron: Translating nanopore raw signal directly into nucleotide sequence using deep learning},
 	year = {2017},
 	doi = {10.1101/179531},
 	publisher = {Cold Spring Harbor Laboratory},
 	URL = {https://www.biorxiv.org/content/early/2017/09/12/179531},
 	eprint = {https://www.biorxiv.org/content/early/2017/09/12/179531.full.pdf},
-	journal = {bioRxiv}
+	journal = {bioRxiv \normalfont{179531}},
 }
 
 @Article{Bradley2015,
-author={Bradley, Phelim
-and Gordon, N. Claire
-and Walker, Timothy M.
-and Dunn, Laura
-and Heys, Simon
-and Huang, Bill
-and Earle, Sarah
-and Pankhurst, Louise J.
-and Anson, Luke
-and de Cesare, Mariateresa
-and Piazza, Paolo
-and Votintseva, Antonina A.
-and Golubchik, Tanya
-and Wilson, Daniel J.
-and Wyllie, David H.
-and Diel, Roland
-and Niemann, Stefan
-and Feuerriegel, Silke
-and Kohl, Thomas A.
-and Ismail, Nazir
-and Omar, Shaheed V.
-and Smith, E. Grace
-and Buck, David
-and McVean, Gil
-and Walker, A. Sarah
-and Peto, Tim E. A.
-and Crook, Derrick W.
-and Iqbal, Zamin},
+author={Bradley, Phelim and others},
 title={Rapid antibiotic-resistance predictions from genome sequence data for Staphylococcus aureus and Mycobacterium tuberculosis},
 journal={Nat Commun},
 year={2015},
@@ -102,9 +77,22 @@ day={21},
 publisher={Nature Publishing Group},
 volume={6},
 pages={10063},
-note={26686880[pmid]},
 issn={2041-1723},
 doi={10.1038/ncomms10063},
 url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4703848/}
+}
+
+@Article{Branton2008,
+author={Branton, Daniel and others},
+title={The potential and challenges of nanopore sequencing},
+journal={Nat Biotechnol},
+year={2008},
+month={Oct},
+volume={26},
+number={10},
+pages={1146-1153},
+issn={1087-0156},
+doi={10.1038/nbt.1495},
+url={http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2683588/}
 }
 
