--- a/text/praca/identifikacia_indel.tex
+++ b/text/praca/identifikacia_indel.tex
@@ -2,5 +2,4 @@
 
 \label{kap:identifikacia_indel} % id kapitoly pre prikaz ref
 
-Našu techniku identifikácie SNP v sekvenovaných
-dátach sa pokúsime rozšíriť aj na inzercie a delécie.
+\todo{Popísať, ako by sa naša technika dala rozšíriť aj na indely.}
