--- a/text/praca/literatura.bib
+++ b/text/praca/literatura.bib
@@ -28,6 +28,19 @@ URL = { + http://dx.doi.org/10.1093/bioinformatics/btw569},
 eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioinformatics_btw569/1/btw569.pdf}
 }
 
+@article{DynamicTimeWarping, 
+author={Hiroaki Sakoe and Seibi Chiba}, 
+journal={IEEE Transactions on Acoustics, Speech, and Signal Processing}, 
+title={Dynamic programming algorithm optimization for spoken word recognition}, 
+year={1978}, 
+volume={26}, 
+number={1}, 
+pages={43-49}, 
+keywords={Acoustics;Constraint optimization;Dynamic programming;Feature extraction;Fluctuations;Heuristic algorithms;Pattern matching;Signal processing algorithms;Speech processing;Timing}, 
+doi={10.1109/TASSP.1978.1163055}, 
+ISSN={0096-3518}, 
+month={Feb},}
+
 @misc{KmerModels,
  title={kmer\_models},
  author={Oxford Nanopore Technologies},
@@ -36,8 +49,36 @@ eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioin
 
 @misc{BasecallerComparison,
  title={A comparison of different {Oxford Nanopore} basecallers},
- author={Ryan Wick},
+ author={Wick, Ryan},
  note={\url{https://github.com/rrwick/Basecalling-comparison}},
+}
+
+
+@article{BWA-MEM,
+   author = {Li, Heng},
+    title = "{Aligning sequence reads, clone sequences and assembly contigs with BWA-MEM}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1303.3997},
+ primaryClass = "q-bio.GN",
+ keywords = {Quantitative Biology - Genomics},
+     year = 2013,
+    month = mar,
+   adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1303.3997L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@misc{tombo,
+ title={Tombo is a suite of tools primarily for the identification of modified nucleotides from raw nanopore sequencing data.},
+ author={Oxford Nanopore Technologies},
+ note={\url{https://github.com/nanoporetech/tombo}},
+}
+
+@misc{resquiggle,
+ title={Re-squiggle Algorithm},
+ author={Oxford Nanopore Technologies},
+ note={\url{https://nanoporetech.github.io/tombo/resquiggle.html#algorithm-details}},
 }
 
 @article{DeepNano2017,
@@ -54,6 +95,14 @@ eprint = {/oup/backfile/content_public/journal/bioinformatics/33/1/10.1093_bioin
     pages = {1-13},
     number = {6},
     doi = {10.1371/journal.pone.0178751}
+}
+
+@article {FastDTW,
+    author = {Salvador, Stan AND Chan, Philip},
+    journal = {KDD Workshop on Mining Temporal and Sequential Data},
+    title = {FastDTW: Toward accurate dynamic time warping in linear time and space},
+    year = {2004},
+    pages = {70-80},
 }
 
 @article {Chiron2017,
