--- a/text/praca/testovanie.tex
+++ b/text/praca/testovanie.tex
@@ -3,3 +3,18 @@
 \label{kap:testovanie}
 
 V tejto kapitole uvedieme metodiku a výsledky testovania nášho prístupu na reálnych dátach.
+
+\todo{Odkázať na implementáciu na githube.}
+
+\section{Dáta}
+
+\todo{Popísať odkiaľ máme dáta, akú majú štruktúru, akú chceme štruktúru a ako sme si ich museli
+upraviť.}
+
+\section{Metriky}
+
+\todo{Popísať, ako budeme merať, či je riešenie dobré.}
+
+\section{Výsledky}
+
+\todo{Veľa rôznych meraní s peknými grafmi.}
